# YouTube-Playlist-Maintainer-2.0

./: .gitignore  README.md  pyproject.toml  requirements.txt  result.txt
configs/: sample.env
configs/defaults/: settings.toml
src/playlist_maintainer/: app_config.py  bootstrap.py  config.py
src/playlist_maintainer/api_data_fetcher/: youtube_client.py
src/playlist_maintainer/application_interfaces/cli/: main.py
src/playlist_maintainer/application_interfaces/exporters/: display_to_terminal.py  export_to_pdf.py  export_to_pdf_file.py  export_to_text_file.py  exporter_utils.py
src/playlist_maintainer/application_interfaces/file_exporters/: debug.py  export_to_pdf.py  export_to_text.py  exporter_utils.py
src/playlist_maintainer/cli/: main.py
src/playlist_maintainer/configs/: config.py  settings.py
src/playlist_maintainer/logging/: logger.py
src/playlist_maintainer/models/: PlaylistDetails.py  PlaylistItem.py  PlaylistItems.py  entities.py
src/playlist_maintainer/services/: playlist_service.py
src/playlist_maintainer/utils/: printer.py
tests/api_data_fetcher_tests/: youtube_client_test.py
